# bencraft

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindEGL.cmake  FindGLESv2.cmake  FindOpenGl.cmake  Finddrm.cmake
shaders/: fragment.glsl  line_fragment.glsl  line_vertex.glsl  vertex.glsl
src/: bencraft  cube.c  cube.h  debug.c  debug.h  display.c  display.h  initgl.c  initgl.h  log.c  log.h  main.c  matrix.c  matrix.h  octree.c  octree.h  window.c  window.h  world.c  world.h
